# ustvgo-iptv

./: .flake8  .gitignore  .mypy.ini  Dockerfile  README.md  __init__.py  channel_categories.json  channel_id_override.json  channels.json  download.py  download.sh  install.sh  main.py  play.sh  rc.ustvgo  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  update.py  update.sh  ustvgo.m3u  ustvgo.m3u8  ustvgo_iptv.py
.github/workflows/: deploy.yml  dev_build.yml  docker.yml  release.yml  tests.yml  tvguide.yml
gui/: __init__.py  app.py  error_popup.py  paths.py  settings.py  utils.py
gui/icons/: icon.icns
gui/widgets/: __init__.py  multiline_log.py  multiline_with_links.py
scripts/: build.py
