[flake8]
max-line-length = 110
per-file-ignores =
    # module imported but unused
    __init__.py:F401,

[metadata]
name = ustvgo-iptv
author = Andy Trofimov
author_email = interlark@gmail.com
license = MIT
keywords = ustvgo,iptv,m3u8,playlist,epg,tvguide,english
url = https://github.com/interlark/ustvgo-iptv
description = USTVGO IPTV
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Topic :: Internet
    Topic :: Utilities
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT license

[options]
packages = 
    ustvgo_iptv
package_dir =
    ustvgo_iptv = .
install_requires =
    aiohttp>=3.8.1
    tqdm>=4.64.0
    netifaces>=0.11.0
    furl>=2.1.3
python_requires = >=3.7

[options.package_data]
ustvgo_iptv = channels.json

[options.entry_points]
console_scripts = ustvgo-iptv = ustvgo_iptv.ustvgo_iptv:main

[options.extras_require]
dev =
    wheel>=0.36.2,<0.38
    flake8>=4.0.1
